binding: Disallows to run a function if its context is detached.

There are two contexts when about to run a ScheduledAction.
|this|'s context and the context of the function to be run.
If the latter context no longer has a valid V8PerContextData,
|self| returns null.
    function() { self.testRunner; } // self will be null

This issue has been there for a long time, but
https://crrev.com/2049493005 made it easy to happen.

This CL disallows to run a function if the function's context is
detached.  This is not the right fix, but close to the behavior
before https://crrev.com/2049493005 .

The right fix is that, per spec, |self| always returns the global
proxy object that never be null.  I.e. we need to support detached
windows.

BUG=630996

Review-Url: https://codereview.chromium.org/2191543002
Cr-Commit-Position: refs/heads/master@{#408376}

Former-commit-id: 981ce039703c0350086568b8c922bee8b8ca2761